--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\surya\AppData\Local\Temp\testng-eclipse-2077910879\testng-customsuite.xml</span>
+                    <span>C:\Users\surya\AppData\Local\Temp\testng-eclipse--1904755352\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restApiFrameWork.statuses.UserTimeLineTest" hash-for-method="readTweet">readTweet</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork" hash-for-method="deleteTweet">deleteTweet</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork" hash-for-method="postTweet">postTweet</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork" hash-for-method="readTweet">readTweet</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,9 +130,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.restApiFrameWork.statuses.UserTimeLineTest</span>
+              <span class="class-name">com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteTweet">
+                  </a> <!-- deleteTweet -->
+                  <span class="method-name">deleteTweet</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="postTweet">
+                  </a> <!-- postTweet -->
+                  <span class="method-name">postTweet</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="readTweet">
@@ -135,7 +159,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\surya\AppData\Local\Temp\testng-eclipse-2077910879\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\surya\AppData\Local\Temp\testng-eclipse--1904755352\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +168,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.restApiFrameWork.statuses.UserTimeLineTest&quot;/&gt;
+      &lt;class name=&quot;com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'readTweet')
-data.setCell(0, 2, 'com.restApiFrameWork.statuses.UserTimeLineTest')
-data.setCell(0, 3, 2952);
+data.setCell(0, 1, 'postTweet')
+data.setCell(0, 2, 'com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork')
+data.setCell(0, 3, 4615);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'deleteTweet')
+data.setCell(1, 2, 'com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork')
+data.setCell(1, 3, 610);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'readTweet')
+data.setCell(2, 2, 'com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork')
+data.setCell(2, 3, 601);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,14 +251,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.restApiFrameWork.statuses.UserTimeLineTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.restApiFrameWork.TestCases.TwitterE2EwithFrameWork</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">settingUp</span>
+                <span class="method-name">beforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
+                <span class="method-name">postTweet</span>
+                <span class="method-start">771 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">readTweet</span>
-                <span class="method-start">750 ms</span>
+                <span class="method-start">5402 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">deleteTweet</span>
+                <span class="method-start">6006 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
